# spotifyfetch

./: Cargo.toml
src/: api.rs  auth.rs  config.rs  image.rs  main.rs
