[package]
name = "spotifyfetch"
version = "0.1.0"
edition = "2024"

[dependencies]
base64 = "0.22.1"
colored = "3.0.0"
confy = "2.0.0"
dirs = "6.0.0"
image = "0.25.8"
open = "5.3.2"
rand = "0.9.2"
reqwest = { version = "0.12.24", features = ["json"] }
serde = "1.0.228"
serde_json = "1.0.145"
sha2 = "0.10.9"
strum = "0.27.2"
strum_macros = "0.27.2"
tiny_http = "0.12.0"
tokio = { version = "1.48.0", features = ["full"] }
url = "2.5.7"
validator = { version = "0.20.0", features = ["derive"] }
viuer = { version = "0.9.2", features = ["print-file"] }
